--- a/data.ipynb
+++ b/data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOoNMHlftPRpqRgQL6ip1cJ",
+      "authorship_tag": "ABX9TyOLLsad/CTujkg+ynLrAyEJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,30 +67,93 @@
     {
       "cell_type": "code",
       "source": [
-        "myfile=open(\"\",\"w\")"
+        "#Open the file, delete all the lines that are not data\n",
+        "mass_file=open(\"/content/drive/MyDrive/StudentProject2023/mass_1.mas20.txt\",\"r+\")\n",
+        "lines=mass_file.readlines()\n",
+        "mass_file.seek(0)\n",
+        "mass_file.writelines(lines[36:])"
       ],
       "metadata": {
-        "id": "FC7g1NrQQOUN",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 165
-        },
-        "outputId": "2dc86aaf-8a86-48c2-e77b-0f95ef3f86ae"
+        "id": "FC7g1NrQQOUN"
       },
-      "execution_count": 6,
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "line=mass_file.readline()\n",
+        "line\n",
+        "line.split()\n",
+        "\n",
+        "\n",
+        "line=mass_file.readline()\n",
+        "line\n",
+        "\n",
+        "#line.split() enlève bien tous les espaces, du coup si y'a pas le 0 du début \n",
+        "#il est pas compté\n",
+        "splitted_list=line.split()\n",
+        "print(splitted_list)\n",
+        "\n",
+        "print(splitted_list.index(\"B-\"))\n",
+        "if splitted_list.index(\"B-\")==11 :\n",
+        "    splitted_list.pop(0) \n",
+        "    splitted_list.pop(5) #5 as index 0 is already removed\n",
+        "if splitted_list.index(\"B-\")==10 :\n",
+        "    if int(splitted_list[1])-int(splitted_list[2])==int(splitted_list[0]) :\n",
+        "        splitted_list.pop(5)\n",
+        "    else :\n",
+        "        splitted_list.pop(0)\n",
+        "if len(splitted_list)!=15 :\n",
+        "    splitted_list.insert(11,\"0\")\n",
+        "\n",
+        "print(splitted_list)\n",
+        "#Si expression précédente donne 11, il y a les 2 valeurs en trop le 0 au début\n",
+        "#et le -qlqchose \n",
+        "#Si expression précédente donne 10, on sait pas si c'est le 0 au début ou le \n",
+        "# -qlqchose du coup on fait if [1]-[2]==[0], si c'est égal c'est le -qlq le pb\n",
+        "#sinon c'est le 0 du début\n",
+        "#Si expression précédente donne 9, niquel\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k2RS0f1sUV4e",
+        "outputId": "0761deda-4113-4c2d-865e-967798b58cbc"
+      },
+      "execution_count": 101,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-5e328d85fb3b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmyfile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"https://www-nds.iaea.org/amdc/ame2020/mass_1.mas20.txt\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"w\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'https://www-nds.iaea.org/amdc/ame2020/mass_1.mas20.txt'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['-4', '6', '10', '16', 'Ne', '--', '23986.775', '20.480', '6083.1777', '1.2800', 'B-', '*', '16', '025750.860', '21.986']\n",
+            "10\n",
+            "['-4', '6', '10', '16', 'Ne', '23986.775', '20.480', '6083.1777', '1.2800', 'B-', '*', '0', '16', '025750.860', '21.986']\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Try to extract everything\n",
+        "\n",
+        "data_list=np.array([])\n",
+        "\n",
+        "element_list=mass_file.readlines()\n",
+        "\n",
+        "for element in element_list :\n",
+        "     splitted_data=element.split()\n",
+        "         "
+      ],
+      "metadata": {
+        "id": "A-lKYxt2bnjn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
